--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "sass": "^1.26.8",
         "sass-loader": "^8.0.2",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuetifyjs-mix-extension": "0.0.8"
     },
     "dependencies": {
         "vuetify": "^2.3.1",
