--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=64d15a5129a407a77fbf",
+    "/css/app.css": "/css/app.css?id=22b989e4d97ddd08aa94"
 }
