--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vuetifyjs-mix-extension": "0.0.8"
     },
     "dependencies": {
+        "vue-router": "^3.3.4",
         "vuetify": "^2.3.1",
         "vuetify-loader": "^1.5.0"
     }
